unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Additional_Volunteer_Names__c.field-meta.xml
<CustomField>
    <fullName>Additional_Volunteer_Names__c</fullName>
    <label>Additional Volunteer Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>