unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Background_Check_Status__c.field-meta.xml
<CustomField>
    <fullName>Background_Check_Status__c</fullName>
    <formula>IF(ISPICKVAL( GW_Volunteers__Contact__r.Background_Check_Status__c  ,&quot;None&quot;)||
   ISPICKVAL( GW_Volunteers__Contact__r.Background_Check_Status__c  ,&quot;&quot;), &quot;None&quot;, 
   IF(ISPICKVAL( GW_Volunteers__Contact__r.Background_Check_Status__c  ,&quot;Needed&quot;), &quot;Needed&quot;,
      IF(ISPICKVAL( GW_Volunteers__Contact__r.Background_Check_Status__c  ,&quot;Pass&quot;), &quot;Pass&quot;, &quot;Failed&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Background Check Status</label>
    <type>Text</type>
</CustomField>