unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Brunch__c.field-meta.xml
<CustomField>
    <fullName>Brunch__c</fullName>
    <formula>GW_Volunteers__Volunteer_Job__r.Brunch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brunch</label>
    <type>Checkbox</type>
</CustomField>