unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Completed_Shift__c.field-meta.xml
<CustomField>
    <fullName>Completed_Shift__c</fullName>
    <description>MLF Custom Mar 2024. Not surfaced on page layout. Used for reporting only. Identifies if a Volunteer Hours Status = Completed to facilitate counting the number of Completed Volunteer Hours within a Shift when building Summary Reports.</description>
    <formula>IF(  ISPICKVAL( GW_Volunteers__Status__c , &quot;Completed&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Shift?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>