unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Contact_SMS_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Contact_SMS_Opt_In__c</fullName>
    <description>Evaluates the Contact.SMS_Status__c and determines whether Contact is SMS opted in or not.</description>
    <formula>AND(
 NOT(ISNULL(TEXT(GW_Volunteers__Contact__r.SMS_Status__c))),
 NOT(ISPICKVAL(GW_Volunteers__Contact__r.SMS_Status__c, &#39;OptedOut&#39;))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Evaluates the Contact.SMS_Status__c and determines whether Contact is SMS opted in or not.</inlineHelpText>
    <label>Contact SMS Opt-In</label>
    <type>Checkbox</type>
</CustomField>