unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Created_Date_2__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_2__c</fullName>
    <description>MLF Custom May 2023. Duplication of field &quot;Created Date&quot; to facilitate Stacked Summary reporting using Created Date for grouping by Month and across Years. Not surfaced on Page Layouts</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date-2</label>
    <type>Date</type>
</CustomField>