unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <description>MLF customization Winter 2025. Change required for new Exp Cloud based Volunteer Portal. This new field, with a shortened Label, is used for display within the Vol Portal to eliminate Label truncation within the Vol Portal mobile experience.</description>
    <formula>GW_Volunteers__Shift_Start_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date/Time</label>
    <type>DateTime</type>
</CustomField>