unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/fortafy_FormSubmission__c.field-meta.xml
<CustomField>
    <fullName>fortafy_FormSubmission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Submission</label>
    <referenceTo>fortafy_FormSubmission__c</referenceTo>
    <relationshipLabel>Submission</relationshipLabel>
    <relationshipName>Submission</relationshipName>
    <type>Lookup</type>
</CustomField>