unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/fortafy_job_location_state__c.field-meta.xml
<CustomField>
    <fullName>fortafy_job_location_state__c</fullName>
    <formula>GW_Volunteers__Volunteer_Job__r.fortafy_Location__r.fortafy_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Location State/Province</label>
    <type>Text</type>
</CustomField>