unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/fortafy_job_location_street__c.field-meta.xml
<CustomField>
    <fullName>fortafy_job_location_street__c</fullName>
    <formula>GW_Volunteers__Volunteer_Job__r.fortafy_Location__r.fortafy_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Location Street</label>
    <type>Text</type>
</CustomField>