unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/fortafy_JobLocationFullAddress__c.field-meta.xml
<CustomField>
    <fullName>fortafy_JobLocationFullAddress__c</fullName>
    <formula>GW_Volunteers__Volunteer_Job__r.Location_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Location Full Address</label>
    <type>Text</type>
</CustomField>