unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/fortafy_volunteer_first_name__c.field-meta.xml
<CustomField>
    <fullName>fortafy_volunteer_first_name__c</fullName>
    <formula>GW_Volunteers__Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer First Name</label>
    <type>Text</type>
</CustomField>