unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/fortafy_VolunteerDetails__c.field-meta.xml
<CustomField>
    <fullName>fortafy_VolunteerDetails__c</fullName>
    <label>Volunteer Details</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>