unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/fortfafy_job_location_city__c.field-meta.xml
<CustomField>
    <fullName>fortfafy_job_location_city__c</fullName>
    <formula>GW_Volunteers__Volunteer_Job__r.fortafy_Location__r.fortafy_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Location City</label>
    <type>Text</type>
</CustomField>