unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/GW_Volunteers__Comments__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Comments__c</fullName>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>