unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/GW_Volunteers__Contact__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Hours</relationshipLabel>
    <relationshipName>Volunteer_Hours</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>