unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/GW_Volunteers__End_Date__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>