unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/GW_Volunteers__Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Hours_Worked__c</fullName>
    <label>Hours Worked</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>