unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/GW_Volunteers__Planned_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Planned_Start_Date_Time__c</fullName>
    <inlineHelpText>The actual date &amp; time the volunteer is planning on starting.</inlineHelpText>
    <label>Planned Start Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>