unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/GW_Volunteers__Total_Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Total_Hours_Worked__c</fullName>
    <formula>IF( ISPICKVAL(GW_Volunteers__Status__c, &quot;Completed&quot;), GW_Volunteers__Hours_Worked__c *  GW_Volunteers__Number_of_Volunteers__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>