unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/GW_Volunteers__Volunteer_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Campaign_Name__c</fullName>
    <formula>GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Campaign__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Campaign Name</label>
    <type>Text</type>
</CustomField>