unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/GW_Volunteers__Volunteer_Recurrence_Schedule__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Recurrence_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Recurrence Schedule</label>
    <referenceTo>GW_Volunteers__Volunteer_Recurrence_Schedule__c</referenceTo>
    <relationshipLabel>Volunteer Hours</relationshipLabel>
    <relationshipName>Volunteer_Hours</relationshipName>
    <type>Lookup</type>
</CustomField>