unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <formula>Volunteer_Job_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job</label>
    <type>Text</type>
</CustomField>