unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Location_Information__c.field-meta.xml
<CustomField>
    <fullName>Location_Information__c</fullName>
    <description>Rich Text fields are not supported in Field Formulas. Field update from Volunteer Locations object.</description>
    <inlineHelpText>Source is similar field on Volunteer Job</inlineHelpText>
    <label>Location Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>