unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Most_Recent_Record__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Record__c</fullName>
    <description>This custom field created by Sarah Davenport helps to de-dupe the numerous Volunteer Hours records associated to a Contact. This field can be used in reports to identify only the most recent Volunteer Hours record of the collective set of Volunteer Hours for the Contact. If the Volunteer Hours record Shift Start Date equals the Last Volunteer Date on the Contact then the Volunteer Hours is the most recent so this field is to 1 otherwise it is set to 0.</description>
    <formula>IF( DATEVALUE( GW_Volunteers__Shift_Start_Date_Time__c ) =  GW_Volunteers__Contact__r.GW_Volunteers__Last_Volunteer_Date__c,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Contact the System Admin for information on this MLF Custom field.</inlineHelpText>
    <label>Most Recent Record</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>