unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/My_Volunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>My_Volunteer_Hours__c</fullName>
    <description>A formula that determines whether the current logged in portal user is the same as the contact associated with this record.</description>
    <formula>$User.ContactId =  GW_Volunteers__Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A formula that determines whether the current logged in portal user is the same as the contact associated with this record.</inlineHelpText>
    <label>My Volunteer Hours</label>
    <type>Checkbox</type>
</CustomField>