unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email__c</fullName>
    <description>Field used in Flow Decision if Null is False. Could use a checkbox but it might be handy in the future to see the actual email address being used here from the Contact&#39;s record</description>
    <formula>GW_Volunteers__Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>related Contact&#39;s Email address</inlineHelpText>
    <label>Primary Contact Email</label>
    <type>Text</type>
</CustomField>