unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Program_Director_Email__c.field-meta.xml
<CustomField>
    <fullName>Program_Director_Email__c</fullName>
    <description>Program Director email, whom to be notified when a volunteer cancels his/her shift</description>
    <label>Program Director Email</label>
    <type>Email</type>
</CustomField>