unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Recurring_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Volunteer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring Volunteer</label>
    <type>Checkbox</type>
</CustomField>