unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Release_Form_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Form_Signature_Date__c</fullName>
    <formula>GW_Volunteers__Contact__r.Volunteer_Release_Signature_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Form Signature Date</label>
    <type>Date</type>
</CustomField>