unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Release_Form_Signed__c.field-meta.xml
<CustomField>
    <fullName>Release_Form_Signed__c</fullName>
    <formula>GW_Volunteers__Contact__r.Volunteer_Release_Signature__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Form Signed</label>
    <type>Text</type>
</CustomField>