unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <description>References field of same name on related Volunteer Job record. Long Text fields are inaccessible in field formulas</description>
    <inlineHelpText>Populated by the Volunteer Job record with field of the same name.</inlineHelpText>
    <label>Reminder</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>