unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/RSVP__c.field-meta.xml
<CustomField>
    <fullName>RSVP__c</fullName>
    <formula>HYPERLINK(&quot;/vpstandard/s/volunteer-hours/&quot;&amp;Id, &quot;Cancel/Check-In&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSVP</label>
    <type>Text</type>
</CustomField>