unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Send_Volunteer_SMS__c.field-meta.xml
<CustomField>
    <fullName>Send_Volunteer_SMS__c</fullName>
    <description>Formula used for VolunteerHours.SendSMSScheduledFlow.</description>
    <formula>OR(
  GW_Volunteers__Start_Date__c = TODAY(),
  GW_Volunteers__Start_Date__c = TODAY() + 1
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Send Volunteer SMS</label>
    <type>Checkbox</type>
</CustomField>