unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Shift_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Shift_Completed_Date__c</fullName>
    <description>Updated via a Flow.</description>
    <inlineHelpText>The date on which the Volunteer Hours record was marked Completed. Updated automatically.</inlineHelpText>
    <label>Shift Completed Date</label>
    <type>Date</type>
</CustomField>