unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Shift_Date_within_365_Days__c.field-meta.xml
<CustomField>
    <fullName>Shift_Date_within_365_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shift Date within 365 Days</label>
    <type>Checkbox</type>
</CustomField>