unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Shift_Duration__c.field-meta.xml
<CustomField>
    <fullName>Shift_Duration__c</fullName>
    <formula>GW_Volunteers__Volunteer_Shift__r.GW_Volunteers__Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shift Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>