unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Start_Date_3_Days_From_Today__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_3_Days_From_Today__c</fullName>
    <description>Use by Volunteer Hours: Email Reminder Flow to determine when to send out reminder.</description>
    <formula>IF(GW_Volunteers__Start_Date__c = TODAY()+3,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shift Start Date is 3 Days from Today (Reminder Sent)</inlineHelpText>
    <label>Start Date 3 Days From Today</label>
    <type>Checkbox</type>
</CustomField>