unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Start_Date_is_Tomorrow__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_is_Tomorrow__c</fullName>
    <formula>GW_Volunteers__Start_Date__c = TODAY()+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date is Tomorrow</label>
    <type>Checkbox</type>
</CustomField>