unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/StrtDate_Formatted__c.field-meta.xml
<CustomField>
    <fullName>StrtDate_Formatted__c</fullName>
    <description>MLF Customization Fall 2024. Created to deconstruct and format the Shift-Start-Date-Time field on the Volunteer Hours Object so it can be used in SMS text messages. Not surfaced on page layout since the field is not for business use.</description>
    <formula>/* C.Hoffart Fall 2024 */
Vol_Shift_Day_of_the_Week__c &amp;
&quot;, &quot; &amp;
StrtDate_MonthName__c &amp;
&quot; &quot; &amp;
(TEXT(DAY( DATEVALUE( GW_Volunteers__Shift_Start_Date_Time__c ) ))) &amp;
&quot;, &quot; &amp;
(TEXT(YEAR (DATEVALUE( GW_Volunteers__Shift_Start_Date_Time__c ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Not for business use. Contact Admin for more information.</inlineHelpText>
    <label>StrtDate-Formatted</label>
    <type>Text</type>
</CustomField>