unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/StrtDate_MonthName__c.field-meta.xml
<CustomField>
    <fullName>StrtDate_MonthName__c</fullName>
    <description>MLF Customization Fall 2024. Created to deconstruct and format the Shift-Start-Date-Time field on the Volunteer Hours Object so it can be used in SMS text messages. Not surfaced on page layout since the field is not for business use.</description>
    <formula>/* C.Hoffart Fall 2024 */
CASE(
MONTH( DateValue( GW_Volunteers__Shift_Start_Date_Time__c )),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
&quot;December&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Not for business use. Contact Admin for more information.</inlineHelpText>
    <label>StrtDate-MonthName</label>
    <type>Text</type>
</CustomField>