unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/StrtTime_Formatted__c.field-meta.xml
<CustomField>
    <fullName>StrtTime_Formatted__c</fullName>
    <description>MLF Customization Fall 2024. Created to deconstruct and format the Shift-Start-Date-Time field on the Volunteer Hours Object so it can be used in SMS text messages. Not surfaced on page layout since the field is not for business use.</description>
    <formula>/* C.Hoffart Fall 2024 */
StrtTime_Hour__c &amp; &quot;:&quot; &amp; StrtTime_Minute__c &amp; &quot; &quot; &amp;StrtTime_AMorPM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Not for business use. Contact Admin for more information.</inlineHelpText>
    <label>StrtTime-Formatted</label>
    <type>Text</type>
</CustomField>