unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/StrtTime_Minute__c.field-meta.xml
<CustomField>
    <fullName>StrtTime_Minute__c</fullName>
    <description>MLF Customization Fall 2024. Created to deconstruct and format the Shift-Start-Date-Time field on the Volunteer Hours Object so it can be used in SMS text messages. Not surfaced on page layout since the field is not for business use.</description>
    <formula>/* C.Hoffart Fall 2024 */
/* For a time starting at the top of the hour, ie: 8:00, this formula */
/* adds an additional Zero to the right of the returned value so */
/* so Minute is displayed as 8:00 versus 8:0 */
IF (
TEXT(MINUTE(TIMEVALUE(GW_Volunteers__Shift_Start_Date_Time__c))) = &quot;0&quot;,
TEXT(MINUTE(TIMEVALUE(GW_Volunteers__Shift_Start_Date_Time__c))) &amp; &quot;0&quot;,
TEXT(MINUTE(TIMEVALUE(GW_Volunteers__Shift_Start_Date_Time__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Not for business use. Contact Admin for more information.</inlineHelpText>
    <label>StrtTime-Minute</label>
    <type>Text</type>
</CustomField>