unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Vol_Shift_Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Vol_Shift_Day_of_the_Week__c</fullName>
    <formula>GW_Volunteers__Volunteer_Shift__r.Shift_Day_of_the_Week__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day</label>
    <type>Text</type>
</CustomField>