unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Volunteer_Follow_Up_Thank_You__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Follow_Up_Thank_You__c</fullName>
    <description>References the field of the same name on Volunteer Job records. Because it&#39;s a Long Text field, field formulas will. not list the field as available to select. SF recommends using an automation to do a field update. Will do so as a Flow.</description>
    <inlineHelpText>Populated by the Volunteer Job record with field of the same name.</inlineHelpText>
    <label>Volunteer Follow Up Thank You</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>