unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Volunteer_Job_Location__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Job_Location__c</fullName>
    <formula>GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Location_Street__c + &quot;, &quot; +
 GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Location_City__c + &quot; &quot; +
 GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Location__c + &quot; &quot; +
 GW_Volunteers__Volunteer_Job__r.GW_Volunteers__Location_Zip_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Job Location</label>
    <type>Text</type>
</CustomField>