unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Volunteer_Shift_Additional_Description__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Shift_Additional_Description__c</fullName>
    <formula>GW_Volunteers__Volunteer_Shift__r.Additional_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Shift Additional Description</label>
    <type>Text</type>
</CustomField>