unpackaged/main/default/objects/GW_Volunteers__Volunteer_Hours__c/fields/Where__c.field-meta.xml
<CustomField>
    <fullName>Where__c</fullName>
    <formula>fortafy_JobLocationFullAddress__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Where</label>
    <type>Text</type>
</CustomField>